--- a/docker/local/docker-compose.yml
+++ b/docker/local/docker-compose.yml
@@ -13,6 +13,9 @@ services:
   broker:
     image: confluentinc/cp-kafka:latest
     hostname: broker
+    restart: always
+    depends_on:
+      - zookeeper
     links:
       - zookeeper
     ports:
@@ -31,6 +34,10 @@ services:
   schema_registry:
     image: confluentinc/cp-schema-registry:latest
     hostname: schema_registry
+    restart: always
+    depends_on:
+      - zookeeper
+      - broker
     links:
       - zookeeper
       - broker
@@ -44,6 +51,11 @@ services:
 
   kafka_rest:
     image: confluentinc/cp-kafka-rest:latest
+    restart: always
+    depends_on:
+      - zookeeper
+      - schema_registry
+      - broker
     links:
       - zookeeper
       - schema_registry
@@ -63,6 +75,10 @@ services:
   kafka_topics_ui:
     image: landoop/kafka-topics-ui:latest
     hostname: kafka_topics_ui
+    depends_on:
+      - broker
+      - kafka_rest
+      - schema_registry
     links:
       - kafka_rest
     ports:
@@ -74,6 +90,10 @@ services:
   kafka_schema_registry_ui:
     image: landoop/schema-registry-ui:latest
     hostname: kafka_schema_registry_ui
+    depends_on:
+      - broker
+      - kafka_rest
+      - schema_registry
     links:
       - schema_registry
     ports:
@@ -100,6 +120,9 @@ services:
   time_service:
     image: drivereu/test-bed-time-service:latest
     hostname: time_service
+    depends_on:
+      - broker
+      - schema_registry
     links:
       - broker
       - schema_registry
@@ -113,6 +136,9 @@ services:
   large_file_service:
     image: drivereu/large-file-service:latest
     hostname: large_file_service
+    depends_on:
+      - broker
+      - schema_registry
     ports:
       - "9090:9090"
     networks:
@@ -124,6 +150,9 @@ services:
 
   trial_management_tool:
     image: drivereu/trial-management-tool:latest
+    depends_on:
+      - broker
+      - schema_registry
     links:
       - broker
       - schema_registry
@@ -146,6 +175,7 @@ services:
     image: strategyeu/homepage:latest
     depends_on:
       - broker
+      - schema_registry
     ports:
       - 80:80
       - 443:443 # When running in production, turn it on
@@ -180,6 +210,9 @@ services:
 
   mailserver:
     image: drivereu/driver-mailserver
+    depends_on:
+      - broker
+      - schema_registry
     hostname: ${HOSTNAME}
     domainname: ${DOMAINNAME}
     container_name: ${CONTAINER_NAME}
