--- a/docker/local/docker-compose.yml
+++ b/docker/local/docker-compose.yml
@@ -2,7 +2,7 @@
 version: "3"
 services:
   zookeeper:
-    image: confluentinc/cp-zookeeper:latest
+    image: confluentinc/cp-zookeeper:7.0.1
     hostname: zookeeper
     ports:
       - "3500:3500"
@@ -11,7 +11,7 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
 
   broker:
-    image: confluentinc/cp-kafka:latest
+    image: confluentinc/cp-kafka:7.0.1
     hostname: broker
     restart: always
     depends_on:
@@ -32,7 +32,7 @@ services:
       KAFKA_REPLICA_FETCH_MAX_BYTES: 100000000
 
   schema_registry:
-    image: confluentinc/cp-schema-registry:latest
+    image: confluentinc/cp-schema-registry:7.0.1
     hostname: schema_registry
     restart: always
     depends_on:
@@ -50,7 +50,7 @@ services:
       SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: "PLAINTEXT://broker:9092"
 
   kafka_rest:
-    image: confluentinc/cp-kafka-rest:latest
+    image: confluentinc/cp-kafka-rest:7.0.1
     restart: always
     depends_on:
       - zookeeper
@@ -73,7 +73,9 @@ services:
       KAFKA_REST_ACCESS_CONTROL_ALLOW_ORIGIN: "*"
 
   kafka_topics_ui:
-    image: landoop/kafka-topics-ui:latest
+    # Either uncomment the original or try out a newer version
+    # image: drivereu/kafka-topics-ui:latest
+    image: attackiq/kafka-topics-ui:latest
     hostname: kafka_topics_ui
     depends_on:
       - broker
@@ -88,7 +90,9 @@ services:
       PROXY: "true"
 
   kafka_schema_registry_ui:
-    image: landoop/schema-registry-ui:latest
+    # Either uncomment the original or try out a newer version
+    # image: drivereu/schema-registry-ui:latest
+    image: hausgold/schema-registry:latest
     hostname: kafka_schema_registry_ui
     depends_on:
       - broker
@@ -102,6 +106,7 @@ services:
       SCHEMAREGISTRY_URL: "http://schema_registry:3502"
       PROXY: "true"
 
+  # Uses the schemas in the local folder. Optionally, ignore this for now.
   bootstrapper:
     image: drivereu/silent-producer:latest
     hostname: bootstrapper
@@ -171,6 +176,8 @@ services:
     volumes:
       - trial-data:/app/trials
 
+  # This is a reverse proxy: if it doesn't run in combination with nginx,
+  # we will ignore it for now.
   homepage:
     image: strategyeu/homepage:latest
     depends_on:
