--- a/docker/local/docker-compose.yml
+++ b/docker/local/docker-compose.yml
@@ -220,9 +220,9 @@ services:
     depends_on:
       - broker
       - schema_registry
-    hostname: ${HOSTNAME}
-    domainname: ${DOMAINNAME}
-    container_name: ${CONTAINER_NAME}
+    hostname: dockermail
+    domainname: drivereu.com
+    container_name: mailserver
     ports:
       - "25:25"
       - "143:143"
@@ -234,73 +234,73 @@ services:
       - mailstate:/var/mail-state
       - mailconfig/:/tmp/docker-mailserver/
     environment:
-      - DMS_DEBUG=${DMS_DEBUG}
-      - ENABLE_CLAMAV=${ENABLE_CLAMAV}
-      - ONE_DIR=${ONE_DIR}
-      - ENABLE_POP3=${ENABLE_POP3}
-      - ENABLE_FAIL2BAN=${ENABLE_FAIL2BAN}
-      - ENABLE_MANAGESIEVE=${ENABLE_MANAGESIEVE}
-      - OVERRIDE_HOSTNAME=${OVERRIDE_HOSTNAME}
-      - POSTMASTER_ADDRESS=${POSTMASTER_ADDRESS}
-      - POSTSCREEN_ACTION=${POSTSCREEN_ACTION}
-      - REPORT_RECIPIENT=${REPORT_RECIPIENT}
-      - REPORT_SENDER=${REPORT_SENDER}
-      - REPORT_INTERVAL=${REPORT_INTERVAL}
-      - SMTP_ONLY=${SMTP_ONLY}
-      - SSL_TYPE=${SSL_TYPE}
-      - TLS_LEVEL=${TLS_LEVEL}
-      - SPOOF_PROTECTION=${SPOOF_PROTECTION}
-      - ENABLE_SRS=${ENABLE_SRS}
-      - PERMIT_DOCKER=${PERMIT_DOCKER}
-      - VIRUSMAILS_DELETE_DELAY=${VIRUSMAILS_DELETE_DELAY}
-      - ENABLE_POSTFIX_VIRTUAL_TRANSPORT=${ENABLE_POSTFIX_VIRTUAL_TRANSPORT}
-      - POSTFIX_DAGENT=${POSTFIX_DAGENT}
-      - POSTFIX_MAILBOX_SIZE_LIMIT=${POSTFIX_MAILBOX_SIZE_LIMIT}
-      - POSTFIX_MESSAGE_SIZE_LIMIT=${POSTFIX_MESSAGE_SIZE_LIMIT}
-      - ENABLE_SPAMASSASSIN=${ENABLE_SPAMASSASSIN}
-      - SA_TAG=${SA_TAG}
-      - SA_TAG2=${SA_TAG2}
-      - SA_KILL=${SA_KILL}
-      - SA_SPAM_SUBJECT=${SA_SPAM_SUBJECT}
-      - ENABLE_FETCHMAIL=${ENABLE_FETCHMAIL}
-      - FETCHMAIL_POLL=${FETCHMAIL_POLL}
-      - ENABLE_LDAP=${ENABLE_LDAP}
-      - LDAP_START_TLS=${LDAP_START_TLS}
-      - LDAP_SERVER_HOST=${LDAP_SERVER_HOST}
-      - LDAP_SEARCH_BASE=${LDAP_SEARCH_BASE}
-      - LDAP_BIND_DN=${LDAP_BIND_DN}
-      - LDAP_BIND_PW=${LDAP_BIND_PW}
-      - LDAP_QUERY_FILTER_USER=${LDAP_QUERY_FILTER_USER}
-      - LDAP_QUERY_FILTER_GROUP=${LDAP_QUERY_FILTER_GROUP}
-      - LDAP_QUERY_FILTER_ALIAS=${LDAP_QUERY_FILTER_ALIAS}
-      - LDAP_QUERY_FILTER_DOMAIN=${LDAP_QUERY_FILTER_DOMAIN}
-      - DOVECOT_TLS=${DOVECOT_TLS}
-      - DOVECOT_USER_FILTER=${DOVECOT_USER_FILTER}
-      - DOVECOT_PASS_FILTER=${DOVECOT_PASS_FILTER}
-      - ENABLE_POSTGREY=${ENABLE_POSTGREY}
-      - POSTGREY_DELAY=${POSTGREY_DELAY}
-      - POSTGREY_MAX_AGE=${POSTGREY_MAX_AGE}
-      - POSTGREY_AUTO_WHITELIST_CLIENTS=${POSTGREY_AUTO_WHITELIST_CLIENTS}
-      - POSTGREY_TEXT=${POSTGREY_TEXT}
-      - ENABLE_SASLAUTHD=${ENABLE_SASLAUTHD}
-      - SASLAUTHD_MECHANISMS=${SASLAUTHD_MECHANISMS}
-      - SASLAUTHD_MECH_OPTIONS=${SASLAUTHD_MECH_OPTIONS}
-      - SASLAUTHD_LDAP_SERVER=${SASLAUTHD_LDAP_SERVER}
-      - SASLAUTHD_LDAP_SSL=${SASLAUTHD_LDAP_SSL}
-      - SASLAUTHD_LDAP_BIND_DN=${SASLAUTHD_LDAP_BIND_DN}
-      - SASLAUTHD_LDAP_PASSWORD=${SASLAUTHD_LDAP_PASSWORD}
-      - SASLAUTHD_LDAP_SEARCH_BASE=${SASLAUTHD_LDAP_SEARCH_BASE}
-      - SASLAUTHD_LDAP_FILTER=${SASLAUTHD_LDAP_FILTER}
-      - SASLAUTHD_LDAP_START_TLS=${SASLAUTHD_LDAP_START_TLS}
-      - SASLAUTHD_LDAP_TLS_CHECK_PEER=${SASLAUTHD_LDAP_TLS_CHECK_PEER}
-      - SASL_PASSWD=${SASL_PASSWD}
-      - SRS_EXCLUDE_DOMAINS=${SRS_EXCLUDE_DOMAINS}
-      - SRS_SECRET=${SRS_SECRET}
-      - DEFAULT_RELAY_HOST=${DEFAULT_RELAY_HOST}
-      - RELAY_HOST=${RELAY_HOST}
-      - RELAY_PORT=${RELAY_PORT}
-      - RELAY_USER=${RELAY_USER}
-      - RELAY_PASSWORD=${RELAY_PASSWORD}
+      - DMS_DEBUG=1
+      - ENABLE_CLAMAV=0
+      - ONE_DIR=0
+      - ENABLE_POP3=
+      - ENABLE_FAIL2BAN=0
+      - ENABLE_MANAGESIEVE=
+      - OVERRIDE_HOSTNAME=
+      - POSTMASTER_ADDRESS=
+      - POSTSCREEN_ACTION=enforce
+      - REPORT_RECIPIENT=0
+      - REPORT_SENDER=
+      - REPORT_INTERVAL=daily
+      - SMTP_ONLY=
+      - SSL_TYPE=
+      - TLS_LEVEL=
+      - SPOOF_PROTECTION=
+      - ENABLE_SRS=0
+      - PERMIT_DOCKER=
+      - VIRUSMAILS_DELETE_DELAY=
+      - ENABLE_POSTFIX_VIRTUAL_TRANSPORT=
+      - POSTFIX_DAGENT=
+      - POSTFIX_MAILBOX_SIZE_LIMIT=
+      - POSTFIX_MESSAGE_SIZE_LIMIT=
+      - ENABLE_SPAMASSASSIN=0
+      - SA_TAG=2.0
+      - SA_TAG2=6.31
+      - SA_KILL=6.31
+      - SA_SPAM_SUBJECT=***SPAM*****
+      - ENABLE_FETCHMAIL=0
+      - FETCHMAIL_POLL=300
+      - ENABLE_LDAP=
+      - LDAP_START_TLS=
+      - LDAP_SERVER_HOST=
+      - LDAP_SEARCH_BASE=
+      - LDAP_BIND_DN=$
+      - LDAP_BIND_PW=
+      - LDAP_QUERY_FILTER_USER=
+      - LDAP_QUERY_FILTER_GROUP=
+      - LDAP_QUERY_FILTER_ALIAS=
+      - LDAP_QUERY_FILTER_DOMAIN=
+      - DOVECOT_TLS=
+      - DOVECOT_USER_FILTER=
+      - DOVECOT_PASS_FILTER=
+      - ENABLE_POSTGREY=0
+      - POSTGREY_DELAY=300
+      - POSTGREY_MAX_AGE=35
+      - POSTGREY_AUTO_WHITELIST_CLIENTS=5
+      - POSTGREY_TEXT=Delayed by postgrey
+      - ENABLE_SASLAUTHD=0
+      - SASLAUTHD_MECHANISMS=
+      - SASLAUTHD_MECH_OPTIONS=
+      - SASLAUTHD_LDAP_SERVER=
+      - SASLAUTHD_LDAP_SSL=
+      - SASLAUTHD_LDAP_BIND_DN=
+      - SASLAUTHD_LDAP_PASSWORD=
+      - SASLAUTHD_LDAP_SEARCH_BASE=
+      - SASLAUTHD_LDAP_FILTER=
+      - SASLAUTHD_LDAP_START_TLS=
+      - SASLAUTHD_LDAP_TLS_CHECK_PEER=
+      - SASL_PASSWD=
+      - SRS_EXCLUDE_DOMAINS=
+      - SRS_SECRET=
+      - DEFAULT_RELAY_HOST=
+      - RELAY_HOST=
+      - RELAY_PORT=
+      - RELAY_USER=
+      - RELAY_PASSWORD=
     cap_add:
       - NET_ADMIN
       - SYS_PTRACE
@@ -311,8 +311,8 @@ services:
     hostname: webmail
     container_name: webmail
     environment:
-      - ROUNDCUBEMAIL_DEFAULT_HOST=${HOSTNAME}
-      - ROUNDCUBEMAIL_SMTP_SERVER=${HOSTNAME}
+      - ROUNDCUBEMAIL_DEFAULT_HOST=dockermail
+      - ROUNDCUBEMAIL_SMTP_SERVER=dockermail
       - ROUNDCUBEMAIL_DEFAULT_PORT=143
       - ROUNDCUBEMAIL_SMTP_PORT=25
     ports:
@@ -329,11 +329,11 @@ services:
       # REST api
       - "7891:7891"
     environment:
-      - ApiMailServerUrl=http://${HOSTNAME}:3000
+      - ApiMailServerUrl=http://dockermail:3000
       - LargeFileServiceUrl=http://large_file_service:9090/upload
-      - SmtpHost=${HOSTNAME}
+      - SmtpHost=dockermail
       - SmtpPort=25
-      - IMapHost=${HOSTNAME}
+      - IMapHost=dockermail
       - IMapPort=993
       - kafka_kafkaHost=broker:9092
       - kafka_schemaRegistryUrl=schema_registry:3502
