--- a/docker/local/docker-compose.yml
+++ b/docker/local/docker-compose.yml
@@ -4,11 +4,15 @@ services:
   zookeeper:
     image: confluentinc/cp-zookeeper:7.0.1
     hostname: zookeeper
+    restart: unless-stopped
     ports:
       - "3500:3500"
     environment:
       ZOOKEEPER_CLIENT_PORT: 3500
       ZOOKEEPER_TICK_TIME: 2000
+    networks:
+      - proxy_tti_network
+      - default
 
   broker:
     image: confluentinc/cp-kafka:7.0.1
@@ -30,6 +34,10 @@ services:
       KAFKA_DEFAULT_REPLICATION_FACTOR: 1
       KAFKA_MESSAGE_MAX_BYTES: 100000000
       KAFKA_REPLICA_FETCH_MAX_BYTES: 100000000
+    networks:
+      - proxy_tti_network
+      - default
+
 
   schema_registry:
     image: confluentinc/cp-schema-registry:7.0.1
@@ -48,6 +56,9 @@ services:
       SCHEMA_REGISTRY_LISTENERS: "http://0.0.0.0:3502"
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: "zookeeper:3500"
       SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: "PLAINTEXT://broker:9092"
+    networks:
+      - proxy_tti_network
+      - default
 
   kafka_rest:
     image: confluentinc/cp-kafka-rest:7.0.1
@@ -71,12 +82,16 @@ services:
       KAFKA_CONSUMER_REQUEST_TIMEOUT_MS: 30000
       KAFKA_REST_ACCESS_CONTROL_ALLOW_METHODS: "GET,POST,PUT,DELETE,OPTIONS"
       KAFKA_REST_ACCESS_CONTROL_ALLOW_ORIGIN: "*"
+    networks:
+      - proxy_tti_network
+      - default
 
   kafka_topics_ui:
     # Either uncomment the original or try out a newer version
     # image: drivereu/kafka-topics-ui:latest
     image: attackiq/kafka-topics-ui:latest
     hostname: kafka_topics_ui
+    restart: unless-stopped
     depends_on:
       - broker
       - kafka_rest
@@ -88,12 +103,16 @@ services:
     environment:
       KAFKA_REST_PROXY_URL: "http://kafka_rest:8085"
       PROXY: "true"
+    networks:
+      - proxy_tti_network
+      - default
 
   kafka_schema_registry_ui:
     # Either uncomment the original or try out a newer version
     # image: drivereu/schema-registry-ui:latest
     image: hausgold/schema-registry:latest
     hostname: kafka_schema_registry_ui
+    restart: unless-stopped
     depends_on:
       - broker
       - kafka_rest
@@ -105,6 +124,9 @@ services:
     environment:
       SCHEMAREGISTRY_URL: "http://schema_registry:3502"
       PROXY: "true"
+    networks:
+      - proxy_tti_network
+      - default
 
   # Uses the schemas in the local folder. Optionally, ignore this for now.
   bootstrapper:
@@ -121,6 +143,9 @@ services:
     restart: on-failure
     volumes:
       - ./schemas:/src/schemas
+    networks:
+      - proxy_tti_network
+      - default
 
   time_service:
     image: drivereu/test-bed-time-service:latest
@@ -138,10 +163,14 @@ services:
       SCHEMA_REGISTRY_URL: http://schema_registry:3502
       AUTO_REGISTER_SCHEMAS: "true"
     restart: on-failure  
+    networks:
+      - proxy_tti_network
+      - default
 
   large_file_service:
     image: drivereu/large-file-service:latest
     hostname: large_file_service
+    restart: unless-stopped
     depends_on:
       - broker
       - schema_registry
@@ -150,17 +179,22 @@ services:
     environment:
       HOST: localhost
       PORT: 9090
+    networks:
+      - proxy_tti_network
+      - default
 
   trial_management_tool:
     image: strategyeu/trial-management-tool:latest
+    hostname: tmt
+    restart: unless-stopped
     depends_on:
       - broker
       - schema_registry
     links:
       - broker
       - schema_registry
-    ports:
-      - "3210:3210"
+#    ports:
+#      - "3210:3210"
     environment:
       CLIENT_ID: TB-TrialMgmt
       KAFKA_HOST: broker:9092
@@ -173,18 +207,23 @@ services:
       # SSL_CA: certs/test-ca.pem
     volumes:
       - trial-data:/app/trials
+    networks:
+      - proxy_tti_network
+      - default
 
   # This is a reverse proxy: if it doesn't run in combination with nginx,
   # we will ignore it for now.
   # Use the INTERNAL port number for redirect!
   homepage:
     image: strategyeu/homepage:latest
+    hostname: homepage
+    restart: unless-stopped
     depends_on:
       - broker
       - schema_registry
 #    ports:
-#      - 80:80
-#      - 443:443 # When running in production, turn it on
+#      - "80:80"
+#      - "443:443" # When running in production, turn it on
     environment:
       hostname: strategy.satways.net
       title: STRATEGY
@@ -195,36 +234,41 @@ services:
       mailgateway: mailgateway:7891/mailgateway
       mailmonitor: mailmonitor:80/mailmonitor
       lfs: large_file_service:9090
-      time: time_service:8100
+      time: time_service:8100/time
       schemas: kafka_schema_registry_ui:8000
       topics: kafka_topics_ui:8000
     volumes:
       - certs:/usr/src/app/certs # For saving the letsencrypt certificates
+    networks:
+      - proxy_tti_network
+      - default
 
 
-  nginx-proxy:
-    image: 'jc21/nginx-proxy-manager:latest'
-    restart: unless-stopped
-    ports:
-      # These ports are in format <host-port>:<container-port>
-      - '80:80' # Public HTTP Port
-      - '443:443' # Public HTTPS Port
-      - '81:81' # Admin Web Port
-      # Add any other Stream port you want to expose
-      # - '21:21' # FTP
-
-    # Uncomment the next line if you uncomment anything in the section
-    environment:
-      # Uncomment this if you want to change the location of 
-      # the SQLite DB file within the container
-      # DB_SQLITE_FILE: "/data/database.sqlite"
-
-      # Uncomment this if IPv6 is not enabled on your host
-      DISABLE_IPV6: 'true'
-
-    volumes:
-      - ./data:/data
-      - ./letsencrypt:/etc/letsencrypt
+#  nginx-proxy:
+#    image: 'jc21/nginx-proxy-manager:latest'
+#    restart: unless-stopped
+#    ports:
+#      # These ports are in format <host-port>:<container-port>
+#      - '80:80' # Public HTTP Port
+#      - '443:443' # Public HTTPS Port
+#      - '81:81' # Admin Web Port
+#      # Add any other Stream port you want to expose
+#      # - '21:21' # FTP#
+#
+#    # Uncomment the next line if you uncomment anything in the section
+#    environment:
+#      # Uncomment this if you want to change the location of 
+#      # the SQLite DB file within the container
+#      # DB_SQLITE_FILE: "/data/database.sqlite"#
+#
+#      # Uncomment this if IPv6 is not enabled on your host
+#      DISABLE_IPV6: 'true'
+#    networks:
+#      - proxy_tti_network
+#      - default
+#    volumes:
+#      - ./data:/data
+#      - ./letsencrypt:/etc/letsencrypt
       
   kafdrop:
     image: obsidiandynamics/kafdrop:latest
@@ -239,6 +283,9 @@ services:
       JVM_OPTS: "-Xms32M -Xmx64M"
       SERVER_SERVLET_CONTEXTPATH: /
       CMD_ARGS: "--message.format=AVRO"
+    networks:
+      - proxy_tti_network
+      - default
 
   mailserver:
     image: drivereu/driver-mailserver:latest
@@ -247,12 +294,13 @@ services:
       - schema_registry
     hostname: dockermail
     domainname: drivereu.com
+    restart: unless-stopped
     container_name: mailserver
 #    ports:
 #      - "25:25"
-#      - "143:143"
+#      - "143:143" # imap unsecure
 #      - "587:587"
-#      - "993:993"
+#      - "993:993" # secure imap
 #      - "3000:3000"
     volumes:
       - maildata:/var/mail
@@ -329,12 +377,16 @@ services:
     cap_add:
       - NET_ADMIN
       - SYS_PTRACE
-    restart: always
+    networks:
+      - proxy_tti_network
+      - default
+
 
   webmail:
     image: drivereu/driver-roundcube:latest
     hostname: webmail
     container_name: webmail
+    restart: unless-stopped
     environment:
       - ROUNDCUBEMAIL_DEFAULT_HOST=dockermail
       - ROUNDCUBEMAIL_SMTP_SERVER=dockermail
@@ -345,15 +397,19 @@ services:
 #      - "4201:80"
     depends_on:
       - mailserver
+    networks:
+      - proxy_tti_network
+      - default
 
   mailgateway:
     image: drivereu/driver-mailgateway:latest
     container_name: mailgateway
-    ports:
-      # websocket notifications
-      - "9996:9996"
-      # REST api
-      - "7891:7891"
+    restart: unless-stopped
+#    ports:
+#      # websocket notifications
+#      - "9996:9996"
+#      # REST api
+#      - "7891:7891"
     environment:
       - ApiMailServerUrl=http://dockermail:3000/mailapi
       - LargeFileServiceUrl=http://large_file_service:9090/upload
@@ -371,19 +427,27 @@ services:
       - broker
       - large_file_service
       - schema_registry
-    restart: always
+    networks:
+      - proxy_tti_network
+      - default
+
 
   mailmonitor:
     image: drivereu/driver-mailmonitor:latest
     container_name: mailmonitor
-
+    restart: unless-stopped
 #    ports:
 #      - "4200:80"
     links:
       - mailgateway
     depends_on:
       - mailgateway
-    restart: always
+    networks:
+      - proxy_tti_network
+      - default
+networks:
+  proxy_tti_network:
+     external: true
 
 volumes:
   maildata:
