--- a/docker/local-c2/docker-compose.yml
+++ b/docker/local-c2/docker-compose.yml
@@ -133,7 +133,7 @@ services:
       KAFKA_BROKER_URL: broker:9092
       SCHEMA_REGISTRY_URL: http://schema_registry:3502
       AUTO_REGISTER_SCHEMAS: "true"
-    restart: on-failure  
+    restart: on-failure
 
   large_file_service:
     image: drivereu/large-file-service:latest
@@ -162,7 +162,7 @@ services:
       KAFKA_HOST: broker:9092
       SCHEMA_REGISTRY: http://schema_registry:3502
       TRIAL_MANAGER_SERVER_PORT: 3210
-      SERVER: 'http://localhost/tmt'
+      SERVER: "http://localhost/tmt"
       # SSL: "false"
       # SSL_PFX: certs/TB-TrialMgmt.p12
       # SSL_PASSPHRASE: changeit
@@ -191,37 +191,36 @@ services:
       mailgateway: mailgateway:7891/mailgateway
       mailmonitor: mailmonitor:80/mailmonitor
       lfs: large_file_service:9090
-      time: time_service:8100
+      time: time_service:8100/time
       schemas: kafka_schema_registry_ui:8000
       topics: kafka_topics_ui:8000
     volumes:
       - certs:/usr/src/app/certs # For saving the letsencrypt certificates
 
+  #  nginx-proxy:
+  #    image: 'jc21/nginx-proxy-manager:latest'
+  #    restart: unless-stopped
+  #    ports:
+  #      # These ports are in format <host-port>:<container-port>
+  #      #- '80:80' # Public HTTP Port
+  #      #- '443:443' # Public HTTPS Port
+  #      #- '81:81' # Admin Web Port
+  #      # Add any other Stream port you want to expose
+  #      # - '21:21' # FTP
+  #
+  #    # Uncomment the next line if you uncomment anything in the section
+  #    environment:
+  #      # Uncomment this if you want to change the location of
+  #      # the SQLite DB file within the container
+  #      # DB_SQLITE_FILE: "/data/database.sqlite"
+  #
+  #      # Uncomment this if IPv6 is not enabled on your host
+  #      DISABLE_IPV6: 'true'
+  #
+  #    volumes:
+  #      - ./data:/data
+  #      - ./letsencrypt:/etc/letsencrypt
 
-#  nginx-proxy:
-#    image: 'jc21/nginx-proxy-manager:latest'
-#    restart: unless-stopped
-#    ports:
-#      # These ports are in format <host-port>:<container-port>
-#      #- '80:80' # Public HTTP Port
-#      #- '443:443' # Public HTTPS Port
-#      #- '81:81' # Admin Web Port
-#      # Add any other Stream port you want to expose
-#      # - '21:21' # FTP
-#
-#    # Uncomment the next line if you uncomment anything in the section
-#    environment:
-#      # Uncomment this if you want to change the location of 
-#      # the SQLite DB file within the container
-#      # DB_SQLITE_FILE: "/data/database.sqlite"
-#
-#      # Uncomment this if IPv6 is not enabled on your host
-#      DISABLE_IPV6: 'true'
-#
-#    volumes:
-#      - ./data:/data
-#      - ./letsencrypt:/etc/letsencrypt
-      
   kafdrop:
     image: obsidiandynamics/kafdrop:latest
     depends_on:
@@ -244,12 +243,12 @@ services:
     hostname: dockermail
     domainname: drivereu.com
     container_name: mailserver
-#    ports:
-#      - "25:25"
-#      - "143:143"
-#      - "587:587"
-#      - "993:993"
-#      - "3000:3000"
+    #    ports:
+    #      - "25:25"
+    #      - "143:143"
+    #      - "587:587"
+    #      - "993:993"
+    #      - "3000:3000"
     volumes:
       - maildata:/var/mail
       - mailstate:/var/mail-state
@@ -337,8 +336,8 @@ services:
       - ROUNDCUBEMAIL_DEFAULT_PORT=143
       - ROUNDCUBEMAIL_SMTP_PORT=25
       - REFRESH_TIME=5
-#    ports:
-#      - "4201:80"
+    #    ports:
+    #      - "4201:80"
     depends_on:
       - mailserver
 
@@ -355,7 +354,7 @@ services:
       PORT: 3001
       SERVER: http://localhost:3001
       DISPERSION_SERVICE: https://assistance.hex.tno.nl/dispersionservice
-    
+
   mailgateway:
     image: drivereu/driver-mailgateway:latest
     container_name: mailgateway
