--- a/docker/local-c2/docker-compose.yml
+++ b/docker/local-c2/docker-compose.yml
@@ -112,11 +112,10 @@ services:
     environment:
       KAFKA_HOST: broker:9092
       SCHEMA_REGISTRY: http://schema_registry:3502
-      PRODUCE_TOPICS: simulation_entity_item,simulation_time_mgmt,system_topic_access_invite,simulation_request_startinject,simulation_entity_post,standard_named_geojson,system_heartbeat,system_logging
-      # simulation_request_transport,lcms_plots,simulation_affected_area,simulation_sumo_configuration,standard_cap,chain_power,chain_care,chain_flood,chain,flood_prediction_geojson,flood_actual,system_timing
+      PRODUCE_TOPICS: simulation_entity_item,simulation_time_mgmt,system_topic_access_invite,simulation_request_startinject,simulation_entity_post,standard_named_geojson,system_heartbeat,system_logging,system_request_change_of_trial_stage,system_tm_phase_message,system_tm_role_player,simulation_session_mgmt,standard_cap,send_file,send_message,named_json,simulation_request_startinject,cbrn_geojson,chemical_incident,resource,simulation_entity_featurecollection,parking
     restart: on-failure
     volumes:
-      - ./schemas:/src/schemas
+      - ./schemas:/app/src/schemas
 
   time_service:
     image: drivereu/test-bed-time-service:latest
@@ -148,7 +147,7 @@ services:
       PORT: 9090
 
   trial_management_tool:
-    image: strategyeu/trial-management-tool:0.0.1
+    image: strategyeu/trial-management-tool:test_image
     depends_on:
       - broker
       - schema_registry
@@ -163,6 +162,7 @@ services:
       SCHEMA_REGISTRY: http://schema_registry:3502
       TRIAL_MANAGER_SERVER_PORT: 3210
       SERVER: 'http://localhost/tmt'
+      PRODUCE: system_request_change_of_trial_stage,system_tm_phase_message,system_tm_role_player,simulation_session_mgmt,standard_cap,simulation_entity_post,send_file,send_message,named_json,simulation_request_startinject,cbrn_geojson,chemical_incident,resource,simulation_entity_featurecollection
       # SSL: "false"
       # SSL_PFX: certs/TB-TrialMgmt.p12
       # SSL_PASSPHRASE: changeit
