--- a/docker/cloud/docker-compose.yml
+++ b/docker/cloud/docker-compose.yml
@@ -149,7 +149,7 @@ services:
       PORT: 9090
 
   trial_management_tool:
-    image: drivereu/trial-management-tool:latest
+    image: strategyeu/trial-management-tool:latest
     depends_on:
       - broker
       - schema_registry
@@ -161,8 +161,9 @@ services:
     environment:
       CLIENT_ID: TB-TrialMgmt
       KAFKA_HOST: broker:9092
-      SCHEMA_REGISTRY: http://schema_registry:3502
+      SCHEMA_REGISTRY: schema_registry:3502
       TRIAL_MANAGER_SERVER_PORT: 3210
+      SERVER: "http://localhost/tmt"
       PRODUCE: simulation_session_mgmt,simulation_time_control,simulation_time_mgmt,simulation_entity_post,system_tm_role_player,system_request_change_of_trial_stage,system_tm_phase_message,system_large_data_update
       # SSL: "false"
       # SSL_PFX: certs/TB-TrialMgmt.p12
