Updating TTI with latest images

--- a/docker/default/example.env
+++ b/docker/default/example.env
@@ -1,4 +1,5 @@
+# Rename to .env so it will be read
 HOST=localhost
 BROKER=broker:29092
 SCHEMA=http://schema-registry:8081
-COMPOSE_PROFILES=local   # If set to server, Telegram will start too
+COMPOSE_PROFILES=local
